# trade4

./: .coverage  .env.example  .gitignore  deploy.sh  pyproject.toml
docs/: RESEARCH_FINDINGS.md
docs/superpowers/plans/: 2026-06-05-phase0-backtester.md  2026-06-07-research-harness-phase0-1.md  2026-06-07-scalper-phase1-backtest.md  2026-06-08-research-harness-phase2-3.md
docs/superpowers/specs/: 2026-06-05-phase0-backtester-design.md  2026-06-07-research-harness-design.md  2026-06-07-scalping-growth-bot-design.md
notebooks/: phase0_research.ipynb
output/: phase0_report.html
scripts/: carry_holding_sweep.py  final_validation.py  run_blend.py  run_concentrated.py  run_study.py
src/trade4/: pipeline.py
src/trade4/backtest/: cost_model.py  engine.py
src/trade4/data/: binance.py  (+3 more)
tests/: conftest.py
tests/backtest/: test_cost_model.py  test_engine.py
tests/data/: test_binance.py  test_binance_vision.py  test_binance_vision_cache.py  test_okx.py  test_store.py
tests/live/: test_position_manager.py  test_state.py
tests/report/: test_report.py
tests/research/: test_blend.py  test_costs.py  test_funding_carry.py  test_killer_gate.py  test_manifest.py  test_metrics.py  test_overlay.py  test_panel.py  test_panel_builder.py  test_pbo.py  test_periodic.py  test_portfolio_engine.py  test_strategy.py  test_study.py  test_tearsheet.py  test_trial_registry.py  test_validation.py  test_xs_funding.py  test_xs_momentum.py
tests/scalper/: test_backtest_harness.py  test_risk_manager.py  test_screener.py  test_walk_forward.py
tests/screener/: test_screener.py
(+38 files in other folders)
