[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade4"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trade4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
